--- a/Example/Podfile
+++ b/Example/Podfile
@@ -3,7 +3,7 @@ use_frameworks!
 platform :ios, '12.0'
 
 target 'SauceLive_iOS_Example' do
-  pod 'SauceLive_iOS', :path => '../'
+  # pod 'SauceLive_iOS', :path => '../'
 
   target 'SauceLive_iOS_Tests' do
     inherit! :search_paths
